<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard.Dashboard"
    android:background="@drawable/primary_color_bg"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_20sdp"
        app:cardElevation="@dimen/_5sdp"
        app:cardMaxElevation="@dimen/_6sdp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_20sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/sbbu_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginTop="@dimen/_100sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/app_name"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">


        <androidx.cardview.widget.CardView
            android:id="@+id/btn_ViewUser"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_5sdp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_85sdp"
                    android:layout_marginBottom="@dimen/_60sdp"
                    android:contentDescription="TODO"
                    app:srcCompat="@drawable/user_image" />

                <TextView
                    android:id="@+id/tv_totalUsers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="46dp"
                    android:text="0"
                    android:textColor="@color/bgtint"
                    android:textSize="@dimen/_28ssp" />


                <TextView
                    android:id="@+id/totaluser1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_totalUsers"
                    android:layout_centerHorizontal="true"
                    android:text="Total User"
                    android:textColor="@color/bgtint"
                    android:textSize="@dimen/_15ssp"
                    tools:ignore="UnknownId" />


            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_5sdp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_85sdp"
                    android:layout_marginBottom="@dimen/_60sdp"
                    app:srcCompat="@drawable/text_image" />

                <TextView
                    android:id="@+id/tv_totalNewPost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_35sdp"
                    android:text="0"
                    android:textColor="@color/bgtint"
                    android:textSize="@dimen/_28ssp" />

                <TextView
                    android:id="@+id/totalpost1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_totalNewPost"
                    android:layout_centerHorizontal="true"
                    android:text="Text Image"
                    android:textColor="@color/bgtint"
                    android:textSize="@dimen/_15ssp" />


            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1">


        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_5sdp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_85sdp"
                    android:layout_marginBottom="@dimen/_60sdp"
                    app:srcCompat="@drawable/video_image" />

                <TextView
                    android:id="@+id/tv_totalVideoPost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_35sdp"
                    android:text="0"
                    android:textColor="@color/bgtint"
                    android:textSize="@dimen/_28ssp" />


                <TextView
                    android:id="@+id/totaliamge1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_totalVideoPost"
                    android:layout_centerHorizontal="true"
                    android:text="Video Post"
                    android:textColor="@color/bgtint"
                    android:textSize="@dimen/_15ssp"
                    tools:ignore="UnknownId" />


            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_5sdp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/img_video"
                    android:layout_width="@dimen/_45sdp"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_85sdp"
                    android:layout_marginBottom="@dimen/_60sdp"
                    app:srcCompat="@drawable/audio_image" />

                <TextView
                    android:id="@+id/txt_totalvideos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_35sdp"
                    android:text="0"
                    android:textColor="@color/bgtint"
                    android:textSize="@dimen/_28ssp" />


                <TextView
                    android:id="@+id/tv_totalAudioPost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_totalvideos"
                    android:layout_alignParentBottom="false"
                    android:layout_centerHorizontal="true"
                    android:text="Audio Post"
                    android:textColor="@color/bgtint"
                    android:textSize="@dimen/_15ssp"
                    tools:ignore="UnknownId" />


            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_GalleryImg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/button_style"
                android:padding="@dimen/_12sdp"
                android:text="@string/upload_gallery_image"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_Create_News"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_GalleryImg"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/button_style"
                android:padding="@dimen/_12sdp"
                android:text="@string/create_post"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp" />


        </RelativeLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>